--- a/fisu-app/Base.lproj/Main.storyboard
+++ b/fisu-app/Base.lproj/Main.storyboard
@@ -18,8 +18,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lD1-gC-jlU">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lD1-gC-jlU">
                                 <rect key="frame" x="20" y="20" width="29" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="29" id="7SN-az-WgC"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="29" id="Nhn-0G-hnr"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <inset key="contentEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
                                 <size key="titleShadowOffset" width="2.2250738585072014e-308" height="0.0"/>
@@ -27,29 +31,34 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHb-Z1-ifh">
-                                <rect key="frame" x="236" y="49" width="129" height="48"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" translatesAutoresizingMaskIntoConstraints="NO" id="8zm-pL-EFA">
+                                <rect key="frame" x="372" y="43" width="46" height="51"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="129" id="IZr-2W-K54"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="51" id="4M0-mp-Rpr"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="46" id="7aE-Ud-Cjd"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHb-Z1-ifh">
+                                <rect key="frame" x="235" y="43" width="129" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="eUL-RQ-uqz"/>
+                                    <constraint firstAttribute="width" constant="129" id="o9K-wg-H3z"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="40"/>
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" translatesAutoresizingMaskIntoConstraints="NO" id="8zm-pL-EFA">
-                                <rect key="frame" x="373" y="46" width="54" height="54"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="54" id="26o-FP-vci"/>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="54" id="L9V-vp-mAc"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8zm-pL-EFA" firstAttribute="leading" secondItem="jHb-Z1-ifh" secondAttribute="trailing" constant="8" id="FAm-Vq-WXt"/>
-                            <constraint firstItem="8zm-pL-EFA" firstAttribute="centerY" secondItem="jHb-Z1-ifh" secondAttribute="centerY" id="KCR-mC-X3x"/>
-                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" id="jQB-pH-jdg"/>
-                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="29" id="rtX-yh-YRl"/>
+                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" id="0DU-Ba-A7X"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="bottom" secondItem="jHb-Z1-ifh" secondAttribute="bottom" id="56J-Om-m6T"/>
+                            <constraint firstItem="lD1-gC-jlU" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" id="RFr-wS-azc"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="23" id="Xk2-fb-mB4"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="leading" secondItem="jHb-Z1-ifh" secondAttribute="trailing" constant="8" id="cDq-9c-XmA"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="top" secondItem="jHb-Z1-ifh" secondAttribute="top" id="olS-ta-6Z1"/>
+                            <constraint firstItem="lD1-gC-jlU" firstAttribute="leading" secondItem="zOE-AW-gPU" secondAttribute="leadingMargin" id="pdC-Li-qgo"/>
+                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="23" id="vMV-y3-IoD"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -232,11 +241,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZvV-ck-WoB">
-                                <rect key="frame" x="20" y="28" width="29" height="29"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cutlery" translatesAutoresizingMaskIntoConstraints="NO" id="xau-cl-BEq">
+                                <rect key="frame" x="395" y="42" width="45" height="43"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="29" id="3JU-Lp-kZd"/>
-                                    <constraint firstAttribute="width" constant="29" id="HPe-70-9JL"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="45" id="MST-th-C3A"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="43" id="v3h-dy-Tie"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurants" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ts-U4-pU8">
+                                <rect key="frame" x="213" y="42" width="174" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="QPL-sf-TPy"/>
+                                    <constraint firstAttribute="width" constant="174" id="Vm6-c3-FpM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="35"/>
+                                <color key="textColor" red="0.11764705882352941" green="0.50196078431372548" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZvV-ck-WoB">
+                                <rect key="frame" x="20" y="20" width="29" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="29" id="9sU-Im-48W"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="29" id="xmG-Xl-Efc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <inset key="contentEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
@@ -245,32 +271,17 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurants" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ts-U4-pU8">
-                                <rect key="frame" x="213" y="56" width="174" height="43"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="35"/>
-                                <color key="textColor" red="0.11764705882352941" green="0.50196078431372548" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cutlery" translatesAutoresizingMaskIntoConstraints="NO" id="xau-cl-BEq">
-                                <rect key="frame" x="389" y="45" width="51" height="66"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="51" id="P9g-h1-qvb"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="75" id="wAY-lq-VaQ"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="xau-cl-BEq" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" constant="114.5" id="1FC-o6-kyn"/>
-                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" constant="-265.5" id="4e0-tL-aua"/>
-                            <constraint firstItem="xau-cl-BEq" firstAttribute="centerY" secondItem="vhb-t9-kHc" secondAttribute="centerY" constant="-222" id="CuJ-0Q-hdB"/>
-                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="leading" secondItem="vhb-t9-kHc" secondAttribute="leadingMargin" id="GgN-LO-Msf"/>
-                            <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="25" id="NEI-jZ-pSN"/>
-                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="8" id="QXX-jV-MED"/>
-                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="leading" secondItem="vhb-t9-kHc" secondAttribute="leadingMargin" id="g1g-AS-l1G"/>
-                            <constraint firstItem="5ts-U4-pU8" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" id="lSK-YK-2uR"/>
-                            <constraint firstItem="5ts-U4-pU8" firstAttribute="centerY" secondItem="vhb-t9-kHc" secondAttribute="centerY" constant="-223" id="usm-2Q-RqO"/>
-                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="8" id="zdj-Mx-ZK1"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="leading" secondItem="5ts-U4-pU8" secondAttribute="trailing" constant="8" id="21X-PD-c7a"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="5ts-U4-pU8" secondAttribute="top" id="Qrr-mx-Zz8"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="bottom" secondItem="5ts-U4-pU8" secondAttribute="bottom" id="Thb-vT-Jz9"/>
+                            <constraint firstItem="5ts-U4-pU8" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" id="Vzt-IW-UxI"/>
+                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" id="aLz-4e-EUW"/>
+                            <constraint firstItem="ZvV-ck-WoB" firstAttribute="leading" secondItem="vhb-t9-kHc" secondAttribute="leadingMargin" id="bdg-tB-PBi"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="22" id="xFD-HP-hKV"/>
+                            <constraint firstItem="5ts-U4-pU8" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="22" id="yug-BQ-6hr"/>
                         </constraints>
                     </view>
                 </viewController>
