--- a/fisu-app/Base.lproj/Main.storyboard
+++ b/fisu-app/Base.lproj/Main.storyboard
@@ -32,14 +32,14 @@
                                 </state>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar" translatesAutoresizingMaskIntoConstraints="NO" id="8zm-pL-EFA">
-                                <rect key="frame" x="372" y="43" width="46" height="51"/>
+                                <rect key="frame" x="361" y="28" width="46" height="51"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="51" id="4M0-mp-Rpr"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="46" id="7aE-Ud-Cjd"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHb-Z1-ifh">
-                                <rect key="frame" x="235" y="43" width="129" height="51"/>
+                                <rect key="frame" x="224" y="28" width="129" height="51"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="51" id="eUL-RQ-uqz"/>
                                     <constraint firstAttribute="width" constant="129" id="o9K-wg-H3z"/>
@@ -51,20 +51,98 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" id="0DU-Ba-A7X"/>
+                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="centerX" secondItem="zOE-AW-gPU" secondAttribute="centerX" constant="-11.5" id="0DU-Ba-A7X"/>
                             <constraint firstItem="8zm-pL-EFA" firstAttribute="bottom" secondItem="jHb-Z1-ifh" secondAttribute="bottom" id="56J-Om-m6T"/>
                             <constraint firstItem="lD1-gC-jlU" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" id="RFr-wS-azc"/>
-                            <constraint firstItem="8zm-pL-EFA" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="23" id="Xk2-fb-mB4"/>
+                            <constraint firstItem="8zm-pL-EFA" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="8" id="Xk2-fb-mB4"/>
                             <constraint firstItem="8zm-pL-EFA" firstAttribute="leading" secondItem="jHb-Z1-ifh" secondAttribute="trailing" constant="8" id="cDq-9c-XmA"/>
                             <constraint firstItem="8zm-pL-EFA" firstAttribute="top" secondItem="jHb-Z1-ifh" secondAttribute="top" id="olS-ta-6Z1"/>
                             <constraint firstItem="lD1-gC-jlU" firstAttribute="leading" secondItem="zOE-AW-gPU" secondAttribute="leadingMargin" id="pdC-Li-qgo"/>
-                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="23" id="vMV-y3-IoD"/>
+                            <constraint firstItem="jHb-Z1-ifh" firstAttribute="top" secondItem="Mcq-mr-j4o" secondAttribute="bottom" constant="8" id="vMV-y3-IoD"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b5e-6s-zRu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="915" y="318"/>
+            <point key="canvasLocation" x="881" y="429"/>
+        </scene>
+        <!--View Controller Map-->
+        <scene sceneID="pEe-2z-Z1h">
+            <objects>
+                <viewController id="fJJ-EZ-Msx" customClass="ViewControllerMap" customModule="fisu_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yYN-Sb-7mn"/>
+                        <viewControllerLayoutGuide type="bottom" id="49y-bb-qff"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nPf-LV-dLG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wRM-qG-Wuq">
+                                <rect key="frame" x="20" y="20" width="29" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="29" id="3QB-14-G3n"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="29" id="QUa-VM-UXH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <inset key="contentEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
+                                <size key="titleShadowOffset" width="2.2250738585072014e-308" height="0.0"/>
+                                <state key="normal" title="home" image="house">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Map" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H19-VQ-PhN">
+                                <rect key="frame" x="226" y="28" width="149" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Q4A-g7-ZhS"/>
+                                    <constraint firstAttribute="width" constant="149" id="QQh-U9-4GK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="40"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="btE-AQ-7zP">
+                                <rect key="frame" x="383" y="28" width="41" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="41" id="b74-K8-dxc"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="44" id="glz-Bu-TM6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <inset key="contentEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
+                                <size key="titleShadowOffset" width="2.2250738585072014e-308" height="0.0"/>
+                                <state key="normal" title="citymapimg" image="pin">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pd8-aK-rqK">
+                                <rect key="frame" x="20" y="80" width="560" height="464"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="464" id="cPd-DZ-h0J"/>
+                                </constraints>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="pd8-aK-rqK" firstAttribute="trailing" secondItem="nPf-LV-dLG" secondAttribute="trailingMargin" id="21d-fs-70J"/>
+                            <constraint firstItem="H19-VQ-PhN" firstAttribute="top" secondItem="yYN-Sb-7mn" secondAttribute="bottom" constant="8" id="H6O-bk-eG6"/>
+                            <constraint firstItem="btE-AQ-7zP" firstAttribute="bottom" secondItem="H19-VQ-PhN" secondAttribute="bottom" id="OIj-Bv-DEO"/>
+                            <constraint firstItem="btE-AQ-7zP" firstAttribute="leading" secondItem="H19-VQ-PhN" secondAttribute="trailing" constant="8" id="YhC-nW-OGh"/>
+                            <constraint firstItem="btE-AQ-7zP" firstAttribute="top" secondItem="H19-VQ-PhN" secondAttribute="top" id="Z5u-bI-oJ2"/>
+                            <constraint firstItem="H19-VQ-PhN" firstAttribute="centerX" secondItem="nPf-LV-dLG" secondAttribute="centerX" id="ZM8-G3-bUE"/>
+                            <constraint firstItem="btE-AQ-7zP" firstAttribute="top" secondItem="yYN-Sb-7mn" secondAttribute="bottom" constant="8" id="ebV-lG-YSe"/>
+                            <constraint firstItem="pd8-aK-rqK" firstAttribute="leading" secondItem="nPf-LV-dLG" secondAttribute="leadingMargin" id="p9q-gZ-emT"/>
+                            <constraint firstItem="wRM-qG-Wuq" firstAttribute="top" secondItem="yYN-Sb-7mn" secondAttribute="bottom" id="rB8-no-1ID"/>
+                            <constraint firstItem="pd8-aK-rqK" firstAttribute="top" secondItem="btE-AQ-7zP" secondAttribute="bottom" constant="8" id="sx6-Fi-Frk"/>
+                            <constraint firstItem="wRM-qG-Wuq" firstAttribute="leading" secondItem="nPf-LV-dLG" secondAttribute="leadingMargin" id="t26-JB-DcV"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="pd8-aK-rqK" id="ElA-DK-2Tx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HsV-HH-XiZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="881" y="-224"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -162,6 +240,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="City map"/>
+                                <connections>
+                                    <segue destination="fJJ-EZ-Msx" kind="show" id="VFo-8K-7hy"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zfd-WR-2NL">
                                 <rect key="frame" x="533" y="28" width="29" height="29"/>
@@ -241,23 +322,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cutlery" translatesAutoresizingMaskIntoConstraints="NO" id="xau-cl-BEq">
-                                <rect key="frame" x="395" y="42" width="45" height="43"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="45" id="MST-th-C3A"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="43" id="v3h-dy-Tie"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurants" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ts-U4-pU8">
-                                <rect key="frame" x="213" y="42" width="174" height="43"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="43" id="QPL-sf-TPy"/>
-                                    <constraint firstAttribute="width" constant="174" id="Vm6-c3-FpM"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="35"/>
-                                <color key="textColor" red="0.11764705882352941" green="0.50196078431372548" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZvV-ck-WoB">
                                 <rect key="frame" x="20" y="20" width="29" height="29"/>
                                 <constraints>
@@ -271,23 +335,40 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cutlery" translatesAutoresizingMaskIntoConstraints="NO" id="xau-cl-BEq">
+                                <rect key="frame" x="392" y="28" width="45" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="45" id="MST-th-C3A"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="43" id="v3h-dy-Tie"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurants" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ts-U4-pU8">
+                                <rect key="frame" x="210" y="28" width="174" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="QPL-sf-TPy"/>
+                                    <constraint firstAttribute="width" constant="174" id="Vm6-c3-FpM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="35"/>
+                                <color key="textColor" red="0.11764705882352941" green="0.50196078431372548" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="xau-cl-BEq" firstAttribute="leading" secondItem="5ts-U4-pU8" secondAttribute="trailing" constant="8" id="21X-PD-c7a"/>
                             <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="5ts-U4-pU8" secondAttribute="top" id="Qrr-mx-Zz8"/>
                             <constraint firstItem="xau-cl-BEq" firstAttribute="bottom" secondItem="5ts-U4-pU8" secondAttribute="bottom" id="Thb-vT-Jz9"/>
-                            <constraint firstItem="5ts-U4-pU8" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" id="Vzt-IW-UxI"/>
+                            <constraint firstItem="5ts-U4-pU8" firstAttribute="centerX" secondItem="vhb-t9-kHc" secondAttribute="centerX" constant="-3" id="Vzt-IW-UxI"/>
                             <constraint firstItem="ZvV-ck-WoB" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" id="aLz-4e-EUW"/>
                             <constraint firstItem="ZvV-ck-WoB" firstAttribute="leading" secondItem="vhb-t9-kHc" secondAttribute="leadingMargin" id="bdg-tB-PBi"/>
-                            <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="22" id="xFD-HP-hKV"/>
-                            <constraint firstItem="5ts-U4-pU8" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="22" id="yug-BQ-6hr"/>
+                            <constraint firstItem="xau-cl-BEq" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="8" id="xFD-HP-hKV"/>
+                            <constraint firstItem="5ts-U4-pU8" firstAttribute="top" secondItem="RKF-uT-SvN" secondAttribute="bottom" constant="8" id="yug-BQ-6hr"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nT7-xJ-rcj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="118" y="1082"/>
+            <point key="canvasLocation" x="881" y="1180"/>
         </scene>
     </scenes>
     <resources>
